# ANLS

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
anls/: __init__.py  score.py
anls/cli/: args.py  run.py
anls/common/: exception.py  util.py
anls/evaluation/: __init__.py  const.py  display_results.py  evaluate_json.py  schema.py  validate_data.py
anls/metrics/: __init__.py  dist.py  score.py
test_fixtures/evaluation/evaluate_json/: gold_label.json  submission.json
test_fixtures/evaluation/validate_data/: gold_label.json  submission.json
tests/: score_test.py
tests/evaluation/: evaluate_json_test.py  validate_data_test.py
tests/metrics/: score_test.py
